Bug 522137: cleanup UnitTest runtime framework
Change-Id: Ifb2a3fd43f6d4836c0d2755cf29b407566aea21c